@startuml

header Демо проект
title Схема БД

hide circle
skinparam linetype ortho

entity users {
  * **id**  :  int
  __
  **name**  :  varchar
  __
  **password**  :  varchar
}

entity chats {
  * **id**  :  varchar
  __
  * **title**  :  varchar
  --
  * **description**  :  varchar
  --
  * **admin**  :  user_id
  --
  * **users**  :  list user_id
}

entity chat_users {
  * **id**  :  int
  __
  * **user_id**  :  int
}

entity messages {
  * **number**  :  int
  __
  * **user_id**  :  int
  __
  * **chat_id**  :  int
}

'messages }o--|| users
'carts }o--|| chats
'carts ||--|| users

@enduml
